changed pics on the main page

--- a/index.html
+++ b/index.html
@@ -58,11 +58,6 @@
                     </h1>
                     <nav class="menu_primary xd-nav sl-change light">
 
-                        <!--
-                        <div class="fs-search-top">
-                            <input type="text" value="">
-                        </div>
-                        -->
                         <ul class="menu">
                             <li>
                                 <a class="product-toggle" href="javascript:void(0);">Смартфоны</a>
@@ -163,13 +158,13 @@
 <section id="banner" class="xd-section sec1">
     <div class="banner-slider">
         <div class="slide-item slide-1">
-            <div class="slide1-info">
+            <!-- <div class="slide1-info">
                 <div class="logo-text">ACTIVE 3</div>
                 <div class="kv-btn"><a class="xd-btn">EXPLORE MORE</a></div>
-            </div>
-            <a href="./active-3" class="float-click"></a>
-            <img src="./images/home-slide-1.jpg" class="xd-pc slide-pic">
-            <img src="./images/home-slide-1-mb.jpg" class="xd-mb slide-pic">
+            </div> -->
+            <a href="./joy-3-plus" class="float-click"></a>
+            <img src="./images/home-slide-1-ru.jpg" class="xd-pc slide-pic">
+            <img src="./images/home-slide-1-ru-mb.jpg" class="xd-mb slide-pic">
         </div>
     </div>
 </section>
@@ -179,40 +174,40 @@
     <div id="vs-phone" class="tab-box active">
         <div class="tab-info">
             <div class="tab-list phone-list hlight">
-                <div class="phone-name">
+                <!-- <div class="phone-name">
                     <span>ACTIVE 3</span><br />
                     <span>Contact Us</span><br />
                     <a class="xd-btn">EXPLORE MORE</a>
-                </div>
-                <a href="./active-3" class="float-click"></a>
-                <img src="./images/tab-phone-active3.jpg" class="xd-pc"><img src="./images/tab-phone-active3-mb.jpg" class="xd-mb">
-            </div>
-            <div class="tab-list phone-list">
-                <div class="phone-name">
-                    <span>BEE 3</span><br />
-                    <span>Contact Us</span><br />
-                    <a class="xd-btn">EXPLORE MORE</a>
-                </div>
-                <a href="./bee-3" class="float-click"></a>
-                <img src="./images/tab-phone-bee3.jpg" class="xd-pc"><img src="./images/tab-phone-bee3-mb.jpg" class="xd-mb">
-            </div>
-            <div class="tab-list phone-list">
-                <div class="phone-name">
-                    <span>STAR 3</span><br />
-                    <span>Contact Us</span><br />
-                    <a class="xd-btn">EXPLORE MORE</a>
-                </div>
-                <a href="./star-3" class="float-click"></a>
-                <img src="./images/tab-phone-star3.jpg" class="xd-pc"><img src="./images/tab-phone-star3-mb.jpg" class="xd-mb">
-            </div>
-            <div class="tab-list phone-list">
-                <div class="phone-name">
-                    <span>JOY 3+</span><br />
-                    <span>Contact Us</span><br />
-                    <a class="xd-btn">EXPLORE MORE</a>
-                </div>
+                </div> -->
                 <a href="./joy-3-plus" class="float-click"></a>
-                <img src="./images/tab-phone-joy3.jpg" class="xd-pc"><img src="./images/tab-phone-joy3-mb.jpg" class="xd-mb">
+                <img src="./images/tab-banner-ru.jpg" class="xd-pc"><img src="./images/tab-banner-ru-mob.jpg" class="xd-mb">
+            </div>
+            <div class="tab-list phone-list">
+                <div class="phone-name">
+                    <span>BEE</span><br />
+                    <span>Contact Us</span><br />
+                    <a class="xd-btn">EXPLORE MORE</a>
+                </div>
+                <a href="./bee" class="float-click"></a>
+                <img src="./images/tab-bee-ru.jpg" class="xd-pc"><img src="./images/tab-bee-ru-mob.jpg" class="xd-mb">
+            </div>
+            <div class="tab-list phone-list">
+                <div class="phone-name">
+                    <span>STAR</span><br />
+                    <span>Contact Us</span><br />
+                    <a class="xd-btn">EXPLORE MORE</a>
+                </div>
+                <a href="./star" class="float-click"></a>
+                <img src="./images/tab-star-ru.jpg" class="xd-pc"><img src="./images/tab-star-ru-mob.jpg" class="xd-mb">
+            </div>
+            <div class="tab-list phone-list">
+                <div class="phone-name">
+                    <span>LIVE</span><br />
+                    <span>Contact Us</span><br />
+                    <a class="xd-btn">EXPLORE MORE</a>
+                </div>
+                <a href="./live" class="float-click"></a>
+                <img src="./images/tab-live-ru.jpg" class="xd-pc"><img src="./images/tab-live-ru-mob.jpg" class="xd-mb">
             </div>
             <div class="tab-list phone-list">
                 <div class="phone-name">
@@ -221,7 +216,7 @@
                     <a class="xd-btn">EXPLORE MORE</a>
                 </div>
                 <a href="./joy-2-plus" class="float-click"></a>
-                <img src="./images/tab-phone-joy2plus.jpg" class="xd-pc"><img src="./images/tab-phone-joy2plus-mb.jpg" class="xd-mb">
+                <img src="./images/tab-joy2plus-ru.jpg" class="xd-pc"><img src="./images/tab-joy2plus-ru-mob.jpg" class="xd-mb">
             </div>
         </div>
     </div>
