main page translation

--- a/index.html
+++ b/index.html
@@ -176,35 +176,17 @@
             <div class="tab-list phone-list hlight">
                 <!-- <div class="phone-name">
                     <span>ACTIVE 3</span><br />
-                    <span>Contact Us</span><br />
-                    <a class="xd-btn">EXPLORE MORE</a>
+                    <span>Узнать больше</span><br />
+                    <a class="xd-btn">СМОТРЕТЬ ВИДЕО</a>
                 </div> -->
                 <a href="./joy-3-plus" class="float-click"></a>
                 <img src="./images/tab-banner-ru.jpg" class="xd-pc"><img src="./images/tab-banner-ru-mob.jpg" class="xd-mb">
             </div>
             <div class="tab-list phone-list">
                 <div class="phone-name">
-                    <span>BEE</span><br />
-                    <span>Contact Us</span><br />
-                    <a class="xd-btn">EXPLORE MORE</a>
-                </div>
-                <a href="./bee" class="float-click"></a>
-                <img src="./images/tab-bee-ru.jpg" class="xd-pc"><img src="./images/tab-bee-ru-mob.jpg" class="xd-mb">
-            </div>
-            <div class="tab-list phone-list">
-                <div class="phone-name">
-                    <span>STAR</span><br />
-                    <span>Contact Us</span><br />
-                    <a class="xd-btn">EXPLORE MORE</a>
-                </div>
-                <a href="./star" class="float-click"></a>
-                <img src="./images/tab-star-ru.jpg" class="xd-pc"><img src="./images/tab-star-ru-mob.jpg" class="xd-mb">
-            </div>
-            <div class="tab-list phone-list">
-                <div class="phone-name">
                     <span>LIVE</span><br />
-                    <span>Contact Us</span><br />
-                    <a class="xd-btn">EXPLORE MORE</a>
+                    <span>Узнать больше</span><br />
+                    <a class="xd-btn">СМОТРЕТЬ ВИДЕО</a>
                 </div>
                 <a href="./live" class="float-click"></a>
                 <img src="./images/tab-live-ru.jpg" class="xd-pc"><img src="./images/tab-live-ru-mob.jpg" class="xd-mb">
@@ -212,11 +194,29 @@
             <div class="tab-list phone-list">
                 <div class="phone-name">
                     <span>JOY 2+</span><br />
-                    <span>Contact Us</span><br />
-                    <a class="xd-btn">EXPLORE MORE</a>
+                    <span>Узнать больше</span><br />
+                    <a class="xd-btn">СМОТРЕТЬ ВИДЕО</a>
                 </div>
                 <a href="./joy-2-plus" class="float-click"></a>
                 <img src="./images/tab-joy2plus-ru.jpg" class="xd-pc"><img src="./images/tab-joy2plus-ru-mob.jpg" class="xd-mb">
+            </div>
+            <div class="tab-list phone-list">
+                <div class="phone-name">
+                    <span>STAR</span><br />
+                    <span>Узнать больше</span><br />
+                    <a class="xd-btn">СМОТРЕТЬ ВИДЕО</a>
+                </div>
+                <a href="./star" class="float-click"></a>
+                <img src="./images/tab-star-ru.jpg" class="xd-pc"><img src="./images/tab-star-ru-mob.jpg" class="xd-mb">
+            </div>
+            <div class="tab-list phone-list">
+                <div class="phone-name">
+                    <span>BEE</span><br />
+                    <span>Узнать больше</span><br />
+                    <a class="xd-btn">СМОТРЕТЬ ВИДЕО</a>
+                </div>
+                <a href="./bee" class="float-click"></a>
+                <img src="./images/tab-bee-ru.jpg" class="xd-pc"><img src="./images/tab-bee-ru-mob.jpg" class="xd-mb">
             </div>
         </div>
     </div>
@@ -224,31 +224,29 @@
 
 <section id="why-vsmart" class="xd-section sec3">
     <div class="why-box">
-        <div class="h1">4 REASONS FOR YOU TO CHOOSE US:</div>
+        <div class="h1">4 ПРИЧИНЫ ВЫБРАТЬ НАС:</div>
         <div class="bnf-group">
             <div class="bnf-info wicon-1">
-                <div class="h3">PIONEERING VIETNAMESE TECHNOLOGY</div>
-                <div class="bnf-txt">
-                    Creating high-quality electronic products and smart technology that lead the market. Applying AI technology, and connecting with IoT- based devices.
-                </div>
+                <div class="h3">Стратегическое партнерство c&nbsp;Qualcomm и&nbsp;собственные разработки</div>
+                <div class="bnf-txt">Большинство смартфонов Vsmart производится на&nbsp;процессорах компании Qualcomm, что обеспечивает максимальную производительность и&nbsp;плавную работу без перебоев.</div>
             </div>
             <div class="bnf-info wicon-2">
-                <div class="h3">GLOBAL QUALITY</div>
-                <div class="bnf-txt">Commit to continuously create and improve a complete technology ecosystem. Bring a better and more modern life for people in Vietnam & Global.</div>
+                <div class="h3">Собственное производство полного цикла</div>
+                <div class="bnf-txt">Высокотехнологичный завод общей площадью 15,2&nbsp;га производит до&nbsp;125&nbsp;млн смартфонов в&nbsp;год. Оборудование полного цикла соответствует международному стандарту ISO&nbsp;9001.</div>
             </div>
         </div>
         <div class="bnf-group">
             <div class="bnf-info wicon-3">
-                <div class="h3">EXCELLENT CUSTOMER SERVICE</div>
-                <div class="bnf-txt">Enjoy outstanding warranty up to 18 months and 101-day exchange privilege*<br />*For mobile phone</div>
+                <div class="h3">Расширенная сервисная поддержка</div>
+                <div class="bnf-txt">На&nbsp;все смартфоны Vsmart представляется расширенная гарантия 18&nbsp;месяцев и&nbsp;30&nbsp;дней на&nbsp;обмен товара. Сеть авторизованных сервисных центров охватывает 80&nbsp;городов на&nbsp;всей территории России.</div>
             </div>
             <div class="bnf-info wicon-4">
-                <div class="h3">BEST PRICES</div>
-                <div class="bnf-txt">Our mission is to bring the advanced technology products closer to everyone, Vsmart ensures that we have  the best products - best configuration - best prices.</div>
+                <div class="h3">Лучшие цены</div>
+                <div class="bnf-txt">Наша миссия состоит в&nbsp;том, чтобы сделать высокотехнологичные продукты максимально доступными. Принцип Vsmart: лучшая конфигурация по&nbsp;лучшей цене.</div>
             </div>
         </div>
         <div class="why-cta">
-            <a data-scroll="#tabs-group" class="xd-btn">EXPLORE MORE</a>
+            <a data-scroll="#tabs-group" class="xd-btn">УЗНАТЬ БОЛЬШЕ</a>
         </div>
     </div>
     <div class="why-pic">
