--- a/joy-2-plus/index.html
+++ b/joy-2-plus/index.html
@@ -435,6 +435,12 @@
                         Краткое руководство пользователя
                     </div>
                 </div>
+                <div class="ts-info-col">
+                    <div class="h2 ticon-15">Операционная система</div>
+                    <div class="xd-txt">
+                        Android™ 9.0 Pie™
+                    </div>
+                </div>
             </div>
         </div>
     </div>
