--- a/joy-3-plus/index.html
+++ b/joy-3-plus/index.html
@@ -656,10 +656,19 @@
                                          data-src="../images/joy-3/landing/processor-icon.png" alt="">
                                 </span>ПРОЦЕССОР И ПАМЯТЬ
                             </h3>
-                            <p>ОС: Android 10.0 (Q) + VOS 3.0</p>
                             <p>Оперативная память: 4ГБ</p>
                             <p>Внутренняя память: 64ГБ</p>
                             <p>Процессор: Qualcomm Snapdragon 632</p>
+                        </div>
+                        <div class="fs-parameter-item">
+                            <h3>
+                                <span class="fs-parameter-icon processor-icon">
+                                    <img class="cmPic fs-lazy"
+                                         src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                                         data-src="../images/icon/operation.png" alt="">
+                                </span>ОПЕРАЦИОННАЯ СИСТЕМА
+                            </h3>
+                            <p>Android 10.0 (Q) + VOS 3.0</p>
                         </div>
                         <div class="fs-parameter-item fs-sp">
                             <h3>
