--- a/live/index.html
+++ b/live/index.html
@@ -350,7 +350,6 @@
                 <div class="ts-info-col">
                     <div class="h2 ticon-3">Процессор и память</div>
                     <div class="xd-txt">
-                        ОС: Android™ 9.0 Pie™<br />
                         Оперативная память: 4ГБ | 6ГБ<br />
                         Внутренняя память: 64ГБ<br />
                         Процессор:<br />
@@ -440,6 +439,13 @@
                         Кабель USB Type-C<br />
                         Гарнитура<br />
                         Краткое руководство пользователя
+                    </div>
+                </div>
+
+                <div class="ts-info-col">
+                    <div class="h2 ticon-15">Операционная система</div>
+                    <div class="xd-txt">
+                        Android™ 9.0 Pie™
                     </div>
                 </div>
             </div>
