--- a/bee/index.html
+++ b/bee/index.html
@@ -511,7 +511,6 @@
                                      data-src="../images/icon/processor-icon.png" alt="ПРОЦЕССОР И ПАМЯТЬ">
                             </span>ПРОЦЕССОР И ПАМЯТЬ
                         </h3>
-                        <p>ОС: Android 9.0 (Pie)</p>
                         <p>Оперативная память: 1ГБ</p>
                         <p>Внутренняя память 16ГБ</p>
                         <p>Процессор: Mediatek™ 6739 (4 ядра, 1.3 ГГц, 28-нм)</p>
@@ -588,6 +587,16 @@
                         <p>Кабель microUSB 2.0</p>
                         <p>Краткое руководство пользователя</p>
                     </div>
+                    <div class="fs-parameter-item">
+                        <h3>
+                            <span class="fs-parameter-icon">
+                                <img class="cmPic fs-lazy"
+                                     src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                     data-src="../images/icon/operation.png" alt="ОПЕРАЦИОННАЯ СИСТЕМА">
+                            </span>ОПЕРАЦИОННАЯ СИСТЕМА
+                        </h3>
+                        <p>Android™ 9.0 Pie™</p>
+                    </div>
                 </li>
 
             </ul>
@@ -629,7 +638,6 @@
                                      data-src="../images/icon/processor-icon.png" alt="ПРОЦЕССОР И ПАМЯТЬ">
                             </span>ПРОЦЕССОР И ПАМЯТЬ
                         </h3>
-                        <p>ОС: Android 9.0 (Pie)</p>
                         <p>Оперативная память: 1ГБ</p>
                         <p>Внутренняя память 16ГБ</p>
                         <p>Процессор: Mediatek™ 6739 (4 ядра, 1.3 ГГц, 28-нм)</p>
@@ -699,6 +707,16 @@
                         <p>Зарядное устройство</p>
                         <p>Кабель microUSB 2.0</p>
                         <p>Краткое руководство пользователя</p>
+                    </div>
+                    <div class="fs-parameter-item">
+                        <h3>
+                            <span class="fs-parameter-icon">
+                                <img class="cmPic fs-lazy"
+                                     src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                     data-src="../images/icon/operation.png" alt="ОПЕРАЦИОННАЯ СИСТЕМА">
+                            </span>ОПЕРАЦИОННАЯ СИСТЕМА
+                        </h3>
+                        <p>Android™ 9.0 Pie™</p>
                     </div>
                 </li>
 
