small fixes on main

--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
             <div class="tab-list phone-list">
                 <div class="phone-name">
                     <span>LIVE</span><br />
-                    <span>Узнать больше</span><br />
-                    <a class="xd-btn">СМОТРЕТЬ ВИДЕО</a>
+                    <a class="xd-btn">УЗНАТЬ БОЛЬШЕ</a>
                 </div>
                 <a href="./live" class="float-click"></a>
                 <img src="./images/tab-live-ru.jpg" class="xd-pc"><img src="./images/tab-live-ru-mob.jpg" class="xd-mb">
@@ -194,8 +193,7 @@
             <div class="tab-list phone-list">
                 <div class="phone-name">
                     <span>JOY 2+</span><br />
-                    <span>Узнать больше</span><br />
-                    <a class="xd-btn">СМОТРЕТЬ ВИДЕО</a>
+                    <a class="xd-btn">УЗНАТЬ БОЛЬШЕ</a>
                 </div>
                 <a href="./joy-2-plus" class="float-click"></a>
                 <img src="./images/tab-joy2plus-ru.jpg" class="xd-pc"><img src="./images/tab-joy2plus-ru-mob.jpg" class="xd-mb">
@@ -203,8 +201,7 @@
             <div class="tab-list phone-list">
                 <div class="phone-name">
                     <span>STAR</span><br />
-                    <span>Узнать больше</span><br />
-                    <a class="xd-btn">СМОТРЕТЬ ВИДЕО</a>
+                    <a class="xd-btn">УЗНАТЬ БОЛЬШЕ</a>
                 </div>
                 <a href="./star" class="float-click"></a>
                 <img src="./images/tab-star-ru.jpg" class="xd-pc"><img src="./images/tab-star-ru-mob.jpg" class="xd-mb">
@@ -212,8 +209,7 @@
             <div class="tab-list phone-list">
                 <div class="phone-name">
                     <span>BEE</span><br />
-                    <span>Узнать больше</span><br />
-                    <a class="xd-btn">СМОТРЕТЬ ВИДЕО</a>
+                    <a class="xd-btn">УЗНАТЬ БОЛЬШЕ</a>
                 </div>
                 <a href="./bee" class="float-click"></a>
                 <img src="./images/tab-bee-ru.jpg" class="xd-pc"><img src="./images/tab-bee-ru-mob.jpg" class="xd-mb">
